tests/expected_invalid_generic_call_type_mismatch.diag.out
<input>:9:28: error: argument 1 to 'identity' has type 'Text', expected 'Int'
        support::identity<Int>("seven")
                               ^^^^^^^
